To add initial grid files

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,4 +1,9 @@
 add_subdirectory(doctest)
 
-add_executable(UnitTests UnitTestsMain.cpp)
-target_link_libraries(UnitTests PRIVATE doctest::doctest)
+
+set(test_sources
+        GridTests.cpp)
+
+add_executable(UnitTests UnitTestsMain.cpp ${test_sources})
+target_link_libraries(UnitTests PRIVATE vul::core doctest::doctest)
+target_compile_definitions(UnitTests PRIVATE -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../assets")
