--- a/vul/CMakeLists.txt
+++ b/vul/CMakeLists.txt
@@ -1,4 +1,5 @@
 
+
 set(headers
         Macros.h
         Grid.h
@@ -9,3 +10,4 @@ set(sources
 add_library(core ${headers} ${sources})
 add_library(vul::core ALIAS core)
 target_include_directories(core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/../)
+target_link_libraries(core PUBLIC Kokkos::kokkos)
