To spike out a residual based on LDFSS flux

--- a/vul/CMakeLists.txt
+++ b/vul/CMakeLists.txt
@@ -1,8 +1,12 @@
 
 
 set(headers
+        Flux.h
         Macros.h
         Grid.h
+        Residual.h
+        Solution.h
+        Vulcan.h
         )
 set(sources
         Grid.cpp
@@ -11,3 +15,7 @@ add_library(core ${headers} ${sources})
 add_library(vul::core ALIAS core)
 target_include_directories(core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/../)
 target_link_libraries(core PUBLIC Kokkos::kokkos)
+
+add_executable(ucgo main.cpp)
+target_link_libraries(ucgo PUBLIC vul::core)
+target_compile_definitions(ucgo PRIVATE -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../test/assets")
