To add Physical Flux

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -4,6 +4,8 @@ add_subdirectory(doctest)
 set(test_sources
         ArrayTests.cpp
         GridTests.cpp
+        GasVariableTests.cpp
+        LDFSSFluxTests.cpp
         PointTests.cpp
         )
 
