--- a/vul/CMakeLists.txt
+++ b/vul/CMakeLists.txt
@@ -13,11 +13,11 @@ set(headers
 set(sources
         Grid.cpp
         )
-add_library(core ${headers} ${sources})
-add_library(vul::core ALIAS core)
-target_include_directories(core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/../)
-target_link_libraries(core PUBLIC Kokkos::kokkos)
+add_library(vul ${headers} ${sources})
+add_library(vul::vul ALIAS vul)
+target_include_directories(vul INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/../)
+target_link_libraries(vul PUBLIC Kokkos::kokkos)
 
 add_executable(ucgo main.cpp)
-target_link_libraries(ucgo PUBLIC vul::core)
+target_link_libraries(ucgo PUBLIC vul::vul)
 target_compile_definitions(ucgo PRIVATE -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../test/assets")
