--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -10,5 +10,5 @@ set(test_sources
         )
 
 add_executable(UnitTests UnitTestsMain.cpp ${test_sources})
-target_link_libraries(UnitTests PRIVATE vul::core doctest::doctest)
+target_link_libraries(UnitTests PRIVATE vul::vul doctest::doctest)
 target_compile_definitions(UnitTests PRIVATE -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../assets")
