--- a/vul/CMakeLists.txt
+++ b/vul/CMakeLists.txt
@@ -21,3 +21,4 @@ target_link_libraries(vul PUBLIC Kokkos::kokkos)
 add_executable(ucgo main.cpp)
 target_link_libraries(ucgo PUBLIC vul::vul)
 target_compile_definitions(ucgo PRIVATE -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../test/assets")
+install(TARGETS ucgo DESTINATION bin)
