To compute cell centroids

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -6,6 +6,7 @@ set(test_sources
         GridTests.cpp
         GasVariableTests.cpp
         LDFSSFluxTests.cpp
+        LeastSquaresTests.cpp
         PointTests.cpp
         CompressedRowGraph.cpp
         )
