To spike least squares, but h_view, d_view is really confusing

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -8,7 +8,7 @@ set(test_sources
         LDFSSFluxTests.cpp
         LeastSquaresTests.cpp
         PointTests.cpp
-        CompressedRowGraph.cpp
+        CompressedRowGraphTests.cpp
         )
 
 add_executable(UnitTests UnitTestsMain.cpp ${test_sources})
