--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -14,3 +14,6 @@ set(test_sources
 add_executable(UnitTests UnitTestsMain.cpp ${test_sources})
 target_link_libraries(UnitTests PRIVATE vul::vul Catch2::Catch)
 target_compile_definitions(UnitTests PRIVATE -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../assets")
+
+add_executable(spaces_test SpacesTests.cpp)
+target_link_libraries(spaces_test PRIVATE Kokkos::kokkos)
