--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -3,17 +3,16 @@ add_subdirectory(catch2)
 
 set(test_sources
         ArrayTests.cpp
+        CompressedRowGraphTests.cpp
         GridTests.cpp
         GasVariableTests.cpp
         LDFSSFluxTests.cpp
         LeastSquaresTests.cpp
         PointTests.cpp
-        CompressedRowGraphTests.cpp
+        SpacesTests.cpp
         )
 
 add_executable(UnitTests UnitTestsMain.cpp ${test_sources})
 target_link_libraries(UnitTests PRIVATE vul::vul Catch2::Catch)
 target_compile_definitions(UnitTests PRIVATE -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../assets")
 
-#add_executable(spaces_test SpacesTests.cpp)
-#target_link_libraries(spaces_test PRIVATE Kokkos::kokkos)
