To push through a least squares grad calculator with CompressedGraph<Device>

--- a/vul/CMakeLists.txt
+++ b/vul/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 
 set(headers
-        CompressedRowGraphTests.h
+        CompressedRowGraph.h
         Decompositions.h
         DynamicMatrix.h
         Flux.h
