To split Cell and CartBlock into their own files

--- a/vul/CMakeLists.txt
+++ b/vul/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 
 set(headers
+        CartBlock.h
+        Cell.h
         CompressedRowGraph.h
         Decompositions.h
         DynamicMatrix.h
