--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_subdirectory(catch2)
 
-
 set(test_sources
         ArrayTests.cpp
         CompressedRowGraphTests.cpp
@@ -9,10 +8,13 @@ set(test_sources
         LDFSSFluxTests.cpp
         LeastSquaresTests.cpp
         PointTests.cpp
-        SpacesTests.cpp
-        )
+        SpacesTests.cpp)
 
 add_executable(UnitTests UnitTestsMain.cpp ${test_sources})
 target_link_libraries(UnitTests PRIVATE vul::vul Catch2::Catch)
 target_compile_definitions(UnitTests PRIVATE -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../assets")
 
+if (ddata_FOUND)
+    target_link_libraries(UnitTests PRIVATE ddata::ddata)
+    target_sources(UnitTests PRIVATE JacobianTests.cpp)
+endif ()
